# COS-GASS

./: .gitignore  README.md  environment.yml  main.py  orientation_calculation.ipynb  pyproject.toml  wget-log
batch/: run_spectra_array.sh  run_spectra_single.sh
data/: COS_GASS_TNG.txt  COS_GASS_TNG50_matches.txt  COS_GASS_TNG50_matches_index.csv  COS_GASS_TNG_Complete.txt  COS_GASS_parameters.txt  orientation_summary_snap99.csv  sids_skipped_by_inc.csv  sids_with_inc.txt  sids_with_inc_detailed.csv  sids_with_inc_detailed_run2.csv  sids_with_inc_run2.txt
notebooks/: gal_filter.ipynb  gal_filter_hard.ipynb  m61.ipynb  orientation_calculation.ipynb  run_spectra_one_sid.py  scida_vis.ipynb  sol_sightlines.ipynb  spectra_batch_module.py  spectra_gen.ipynb  vis_spectra.ipynb
tests/56372_sightlines/: endpoints_sightlines_both_sid563732.csv  orient_header_sid563732.json  orient_peralpha_sid563732.csv  orientation.ipynb  spectra.ipynb
tests/56372_sightlines/.ipynb_checkpoints/: 56372_sightlines-checkpoint.ipynb
tests/56372_sightlines/rays_and_recipes_sid563732_snap99/: orient_header_sid563732.json  orient_peralpha_sid563732.csv  rays_sid563732.csv
tests/56372_sightlines/rays_and_recipes_sid563732_snap99_L4Rvir/: orient_header_sid563732.json  rays_sid563732.csv
tests/56372_sightlines/results_563732/: logs.txt
tests/56372_sightlines/sol_consistency/: orientation_offsets.csv
tests/56372_sightlines/tng_orientation_checks_debug/: orientation_sid563732_snap99.csv  orientation_sid563732_snap99.json
(+6 files in other folders)
