[project]
name = "cos-gass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.1",
    "h5py>=3.15.0",
    "illustris-python",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scida>=0.3.5",
    "scipy>=1.16.2",
    "trident>=1.4.2",
    "yt>=4.4.1",
]

[tool.uv.sources]
illustris-python = { git = "https://github.com/illustristng/illustris_python.git" }
